# salz

./: .gitignore  .sqlfluff  LICENSE  README.md  add_player.sh  bot1.sh  bot2.sh  bot3.sh  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  game  game-pipeline.sh  game.hs  gametwo.hs  makefile  match-handler.sh  match-maker.sh  mylib.hs  process-compose.yaml  ranker.sh  readme.md  tst.hs  viz.py
.github/workflows/: api-itest.yaml
APIServer/: .gitignore  ChangeLog.md  README.md  package.yaml
APIServer/src/: ApiServer.hs
Database/: Dockerfile  builddb.sh  pgcliconnect.sh  psqlconnect.sh  rundb.sh
Database/docker-entrypoint-initdb.d/: 1-player.sql  2-game.sql  3-mockdata.sql  4-getframes.sql  game.sql  player.sql
FrontEnd/: Dockerfile  README.md  index.html  nuxt.config.js  package-lock.json  package.json  run.sh
FrontEnd/api/: repo.js
FrontEnd/assets/css/: bulma-configs.scss  bulma-local.scss  functions.sass  styles.scss
FrontEnd/components/: Navbar.vue
FrontEnd/layouts/: default.vue
FrontEnd/md-files/: about.md
FrontEnd/pages/: game.vue  index.vue  inspire.vue
GameEngine/: .gitignore  README.md  done.txt  package.yaml  stack.yaml
GameEngine/app/: Main.hs
GameEngine/src/: Board.hs  BotBuilder.hs  Database.hs  ExternalProcessHandler.hs  Game.hs  Player.hs  PlayerBotHandler.hs  Step.hs  Types.hs
GameEngine/src/salz-api/: models.py  salz-api.py  salz_api.py  taskell.md
Specs/: API_CONTRACT.md
api/: README.md  go.mod  go.sum  itest.sh  k8s.go  main.go  run.sh  salz.db
api/config/: config.go
api/controllers/: botupload.go  controller.go  games.go  login.go  match.go  ping.go  user.go
api/db/: db.go  postgres.go
api/middlewares/: auth.go
api/models/: authtoken.go  botfile.go  game.go  match.go  user.go
api/objectstore/: minio.go
api/router/: router.go
api/test/: integration_test.go
backend/: readme.md
bell/: Main.hs  bell.cabal  docker.nix  loadDevConnections.sh  project.nix
db/: db-up.sh  db.sql  init.sql  seed.sql
dbsetup/: 01-shitauth.sql
documentation/: architecture.md  contracts.md  diagram.dot  overview.dot  run_game.dot
documentation/contracts/: bot-in.json  bot-out.json  game-engine-in.json  game-engine-out.json  game-file.json  tic-tac-toe-prompt.json  tic-tac-toe-reaction.json
documentation/contracts/examples/: bot-in-example.json  bot-out-example.json  game-engine-in-example.json  game-engine-out-example.json  game-file-example.json  tic-tac-toe-prompt-example.json  tic-tac-toe-reaction-example.json
frontend/: docker-compose.yml  readme.md
frontend/visualizer/psc-package/: dependencies.txt
frontend/visualizer/test/: app.js  bower.json  index.html  readme.md
frontend/visualizer/test2/: index.html  psc-package.json
game-pipeline/: Bot.hs  GameBroker.hs  GameEngine.hs  MatchHandler.hs  MatchMaker.sh  Parsers.hs  README.md  TicTacToe.hs  TicTacToePlayer.hs  Types.hs  Utils.hs  cabal.project.freeze  game-engine.cabal  game-pipeline.cabal  seed.sh
game-pipeline/TicTacToe/: GameEngine.hs  Player.hs  StarterBot.hs  Types.hs
game-pipeline/tests/: tic-tac-toe-tst.sh
heaviside/: Main.hs  README.md  docker.nix  heaviside.cabal  project.nix  release.nix
heaviside/source/: Database.hs  HandleBotCmds.hs  Main.hs  Step.hs  UpdateFrameChannel.hs
minio/: minio-ready.sh  minio-up.sh
nix/: hcp.nix
players/: testplayer.hs
salz-api/: Dockerfile  Pipfile  README.md  run.sh  salz-api.py  salz_api.py  test.sh
salz-api/src/: models.py  salz-api.py  taskell.md
salz-core/: .gitignore  ChangeLog.md  Dockerfile  README.md  package.yaml  runBot.sh  salz-core.cabal
salz-db/: Dockerfile  README.md  rundb.sh
salz-db/docker-entrypoint-initdb.d/: 1-player.sql  2-snapshots.sql  3-mockdata.sql  3-moves.sql
salz-engine/: .gitignore  Dockerfile  README.md  package.yaml  salz-core.cabal  salz-engine.cabal  stack.yaml  test.db
salz-engine/app/: Main.hs
salz-engine/src/: Board.hs  BotBuilder.hs  BotHandler.hs  Database.hs  ExternalProcessHandler.hs  Game.hs  Player.hs  PlayerBotHandler.hs  Types.hs
salz-haskell-library/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
salz-haskell-library/app/: Main.hs
salz-haskell-library/src/: Database.hs  Player.hs
salz-web/: .babelrc  .dockerignore  .eslintrc.js  .gitignore  .prettierignore  Dockerfile  README.md  jest.config.js  nuxt.config.js  package-lock.json  package.json
salz-web/api/: repo.js
salz-web/assets/: README.md
salz-web/components/: Navbar.vue
salz-web/dummy-data/: moves-big.json  moves.js  snapshots-big.json  snapshots.js
salz-web/layouts/: default.vue
salz-web/lib/: eventBus.js  jwt.js
salz-web/md-files/: about.md
salz-web/pages/: README.md  about.vue  account.vue  game.vue  guide.vue  index.vue  inspire.vue  login.vue  logout.vue
salz-web/plugins/: README.md  repo.js
salz-web/specs/: hierarchy.md
salz-web/static/: README.md
salz-web/store/: README.md  game.js  login.js
salz-web/test/: FrameControl.spec.js  Navbar.spec.js
starter kits/: player.hs  player.py
starter-kits/bot/: run.sh
starter-kits/gliderplayerpackage/: run.sh
starter-kits/tstpackage/: build.sh
web/: .lintstagedrc.json  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/dev-docs/: code-standards.md
(+129 files in other folders)
