cabal-version:      3.0
name:               game-pipeline
version:            0.1.0.0

license:            MIT

build-type:         Simple

common warnings
    ghc-options: -Wall

library types
    exposed-modules: Types

    default-extensions:
        DeriveGeneric,
        DeriveAnyClass,
        OverloadedStrings,
        DuplicateRecordFields,

    build-depends:
        base ^>=4.18.2.1,
        aeson,

    default-language: Haskell2010

library tic-tac-toe-types
    exposed-modules: TicTacToe.Types

    default-extensions:
        DeriveGeneric,
        DeriveAnyClass,
        OverloadedStrings,
        DuplicateRecordFields,

    build-depends:
        base ^>=4.18.2.1,
        aeson,

    default-language: Haskell2010

executable tic-tac-toe
    import:           warnings

    main-is:          TicTacToe/GameEngine.hs

    default-extensions:
        DeriveGeneric,
        DeriveAnyClass,
        OverloadedStrings

    build-depends:
        base ^>=4.18.2.1,
        optparse-applicative,
        process,
        aeson,
        parsec,
        vector,
        bytestring,
        types,
        tic-tac-toe-types,

    default-language: Haskell2010

executable match-handler
    import:           warnings

    main-is:          MatchHandler.hs

    default-extensions:
        DeriveGeneric,
        DeriveAnyClass,
        OverloadedStrings,
        DuplicateRecordFields

    build-depends:
        base ^>=4.18.2.1,
        optparse-applicative,
        process,
        aeson,
        parsec,
        vector,
        bytestring,
        types

    default-language: Haskell2010

executable tic-tac-toe-player
    import:           warnings

    main-is:          TicTacToe/Player.hs

    default-extensions:
        DeriveGeneric,
        DeriveAnyClass,
        OverloadedStrings,
        DuplicateRecordFields

    build-depends:
        base ^>=4.18.2.1,
        optparse-applicative,
        process,
        aeson,
        parsec,
        vector,
        bytestring,
        types,
        tic-tac-toe-types

    default-language: Haskell2010
