cabal-version:      3.0
name:               game-pipeline
version:            0.1.0.0

license:            MIT

build-type:         Simple

common warnings
    ghc-options: -Wall

executable tic-tac-toe
    import:           warnings

    main-is:          TicTacToe/GameEngine.hs

    default-extensions:
        DeriveGeneric,
        DeriveAnyClass,
        OverloadedStrings

    other-modules:
        Utils
        Types
        TicTacToe.Types

    build-depends:
        base ^>=4.18.2.1,
        optparse-applicative,
        process,
        aeson,
        parsec,
        vector,
        bytestring,

    default-language: Haskell2010

executable match-handler
    import:           warnings

    main-is:          MatchHandler.hs

    default-extensions:
        DeriveGeneric,
        DeriveAnyClass,
        OverloadedStrings,
        DuplicateRecordFields

    other-modules:
        Utils
        Types

    build-depends:
        base ^>=4.18.2.1,
        optparse-applicative,
        process,
        aeson,
        parsec,
        vector,
        bytestring,

    default-language: Haskell2010

executable tic-tac-toe-player
    import:           warnings

    main-is:          TicTacToe/Player.hs

    default-extensions:
        DeriveGeneric,
        DeriveAnyClass,
        OverloadedStrings,
        DuplicateRecordFields

    other-modules:
        Utils
        Types
        TicTacToe.Types

    build-depends:
        base ^>=4.18.2.1,
        optparse-applicative,
        process,
        aeson,
        parsec,
        vector,
        bytestring,

    default-language: Haskell2010
